# mokm-video-editor

./: LEVEL1_IMPLEMENTATION_PLAN.md  README.md  implementation_plan.md  netlify.toml  pnpm-workspace.yaml  project_details.md  prompt.md  readme  task.md  test.md  walkthrough.md
.github/workflows/: deplo.yml
code/: .qmlls.ini  CMakeLists.txt  TODO.md  builderr.md  main.cpp  project_details (Copy).md  project_page_and_windows.md  ui_theme.md  vcpkg-configuration.json  walkthrough 1.md
code/src/: CMakeLists.txt
code/src/functions/: CMakeLists.txt  readme
code/src/functions/animation/: CMakeLists.txt
code/src/functions/audio/: CMakeLists.txt
code/src/functions/core/: CMakeLists.txt  MokmProjectManager.cpp  MokmProjectManager.h  MokmUndoManager.cpp  MokmUndoManager.h
code/src/functions/core/commands/: AddClipCommand.cpp  AddClipCommand.h  MoveClipCommand.cpp  MoveClipCommand.h  RemoveClipCommand.cpp  RemoveClipCommand.h  SplitClipCommand.cpp  SplitClipCommand.h  TrimClipCommand.cpp  TrimClipCommand.h
code/src/functions/database/: CMakeLists.txt  MediaBinImageProvider.h  MediaBinModel.cpp  MediaBinModel.h
code/src/functions/ffmpeg_wrapper/: CMakeLists.txt  FFmpegMediaProbe.cpp  FFmpegMediaProbe.h  FFmpegThumbnailer.cpp  FFmpegThumbnailer.h
code/src/functions/nodes/: CMakeLists.txt
code/src/functions/plugins/: CMakeLists.txt
code/src/functions/proxy/: CMakeLists.txt
code/src/functions/rendering/: CMakeLists.txt
code/src/functions/some_class/: someclass.cpp  someclass.h
code/src/functions/timeline/: CMakeLists.txt  PlayheadController.cpp  PlayheadController.h  TimelineClipModel.cpp  TimelineClipModel.h  TimelineModel.cpp  TimelineModel.h
code/src/functions/video/: CMakeLists.txt
code/src/pages/: AudioPage.qml  CompositorPage.qml  EditorPage.qml  HistoryPage.qml  Main.qml  MediaBinPage.qml  NodeEditorPage.qml  RendererPage.qml  SettingsPage.qml  SplashScreen.qml  Theme.qml
code/src/pages/components/: CMakeLists.txt  EditorToolBar.qml  MediaPreviewPanel.qml  NodeSocket.qml  PanelHeader.qml  Sidebar.qml  SidebarButton.qml  StatusBar.qml  TimelineRuler.qml  TimelineTrack.qml
code/src/pages/components/docking/: DockDropOverlay.qml  DockManager.qml  DockPanel.qml  DockRoot.qml  DockSplitter.qml  DockTabBar.qml  FloatingWindow.qml  HSplit.qml  SplitContainer.qml
code/src/pages/components/panels/: MiniBin.qml  NodePanel.qml  PreviewPanel.qml  PropertiesPanel.qml  TimelinePanel.qml
code/src/providers/: ffmpegcompositionengine.cpp  ffmpegcompositionengine.h  ffmpegprobe.cpp  ffmpegprobe.h  foldermodel.cpp  foldermodel.h  frameview.cpp  frameview.h  mediafilemodel.cpp  mediafilemodel.h  timelineplaybackengine.cpp  timelineplaybackengine.h  timelineplayer.cpp  timelineplayer.h  trackmodel.cpp  trackmodel.h
code/src/resources/: resources.qrc
code/src/ui/: CMakeLists.txt  Main.qml  readme
code/src/ui/attribute_inspector/: AttributeInspector.qml  CMakeLists.txt
code/src/ui/audio_editor/: AudioMixingWorkspace.qml  CMakeLists.txt
code/src/ui/color_grading_editor/: CMakeLists.txt  ColorGradingWorkspace.qml
code/src/ui/core/: Theme.qml  qmldir
code/src/ui/effects_browser/: CMakeLists.txt  EffectsBrowser.qml
code/src/ui/export_page/: CMakeLists.txt  ExportWorkspace.qml
code/src/ui/history_panel/: CMakeLists.txt  HistoryPanel.qml
code/src/ui/keyboard_shortcuts/: CMakeLists.txt  ShortcutMapper.qml
code/src/ui/keyframe_editor/: CMakeLists.txt  KeyframeEditor.qml
code/src/ui/marker_list/: CMakeLists.txt  MarkerList.qml
code/src/ui/media_bin/: CMakeLists.txt  MediaBinWorkspace.qml
code/src/ui/node_editor/: CMakeLists.txt  NodeEditorWorkspace.qml
code/src/ui/plugin_manager/: CMakeLists.txt  PluginManagerModal.qml
code/src/ui/preferences/: CMakeLists.txt  PreferencesModal.qml
code/src/ui/project_settings/: CMakeLists.txt  ProjectSettingsModal.qml
code/src/ui/proxy_manager/: CMakeLists.txt  ProxyDashboard.qml
code/src/ui/video_editor/: CMakeLists.txt  VideoEditorWorkspace.qml
web/: TODO.md  package.json  pnpm-lock.yaml  react-router.config.ts  ui_theme.md  vite.config.ts
web/app/: app.css  root.tsx
web/app/routes/: home.tsx
web/app/sections/: Features.tsx  Footer.tsx  Hero.tsx  Navbar.tsx  ProxyHighlight.tsx  Roadmap.tsx  Sidebar.tsx  TechStack.tsx
